fix alignment

--- a/src/sass/app_2/_common/form/input_field.scss
+++ b/src/sass/app_2/_common/form/input_field.scss
@@ -50,7 +50,6 @@
             vertical-align: middle;
             width: 12px;
             height: 12px;
-            border-radius: 2px;
             border-color: $COLOR_GRAY_2;
 
             &:hover {
@@ -91,25 +90,21 @@
         &:has(input[type=checkbox]) {
             display: inline-block;
         }
+        .tooltip {
+            display: inline-block;
+        }
         input {
             background-color: $COLOR_BLUE;
             color: $COLOR_WHITE;
-            border-color: $COLOR_GRAY_2;
+            border-color: $COLOR_GRAY_2 !important;
 
             &[type=checkbox] {
                 vertical-align: middle;
                 width: 16px;
                 height: 16px;
 
-                &:hover {
-                    border-color: $COLOR_ORANGE_3;
-                }
-                &:focus {
-                    border-color: $COLOR_ORANGE_3;
-                }
-                &:active {
-                    border-color: $COLOR_ORANGE_3;
-                    background: $COLOR_ORANGE_3;
+                &:hover, &:focus, &:active {
+                    border-color: $COLOR_ORANGE_3 !important;
                 }
             }
             &:hover, &:focus, &:active {
